<resources>
    <string name="app_name">BasicArchitecture</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birth_date">Birth date</string>
    <string name="next">Next</string>
    <string name="address">Address</string>
    <string name="interests">Interests</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="country">Country</string>
    <string name="city">City</string>
</resources>